# pydaq-dashboard-update

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  user_settings.json  version.json
.vooster/: project.json
src/: __init__.py  admin_utils.py  daq_config_widget.py  daq_worker.py  dashboard.py  data_io.py  offline_player.py  plot_widget.py  settings_widget.py  signal_pipeline.py  update_checker.py
tests/: __main__.py  admin_utils_test.py  daq_config_widget_test.py  daq_worker_test.py  dashboard_test.py  data_io_test.py  offline_player_test.py  plot_widget_test.py  settings_widget_test.py  signal_pipeline_test.py  update_checker_test.py
