[project]
name = "pydaq-dashboard"
version = "1.0.0"
description = "NI DAQ 실시간/오프라인 신호처리 대시보드 (PySide6)"
authors = [
  { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.dependencies]
PySide6 = ">=6.5"
nidaqmx = ">=0.6"
numpy = ">=1.23"
pyqtgraph = ">=0.13"
h5py = ">=3.7"
scipy = ">=1.9"
requests = ">=2.28"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 한글 주석: 실제 배포 시 authors, version 등 메타정보를 수정하세요.

[tool.uv]
# uv 관련 설정이 필요하면 여기에 추가 